# joint_ownership_management

./: README.md  pyproject.toml  pyrightconfig.json
src/: manage.py
src/car_charging/: admin.py  apps.py  calculate.py  cost_services.py  fbr_services.py  forms.py  hks_services.py  signals.py  urls.py  views.py  zaptec_services.py
src/car_charging/management/commands/: cost_details_by.py  fetch_charging_sessions.py  fetch_spot_prices.py  get_latest_spot_price.py  insert_historical_fees.py  load_spot_prices.py  (+2 more)
src/car_charging/managers/: __init__.py  charging_session_manager.py  cost_details_manager.py  energy_details_manager.py
src/car_charging/migrations/: 0001_initial.py  0002_alter_chargingsession_user_full_name_and_more.py  0003_zaptectoken_alter_chargingsession_energy_and_more.py  0004_spotprices.py  0005_chargingsession_price_area.py  0006_energydetails_spot_price.py  0007_alter_chargingsession_energy_and_more.py  0008_alter_spotprices_end_time.py  0009_energydetails_cost.py  0010_spotprice_alter_chargingsession_options_and_more.py  0011_delete_spotprices_alter_spotprice_end_time_and_more.py  0012_alter_spotprice_start_time_and_more.py  0013_spotprice_spot_price_start_t_8abc5c_idx_and_more.py  0014_gridprice_spotpricerefund_usageprice_costdetails.py  0015_alter_energydetails_energy.py  0016_alter_costdetails_energy.py
src/car_charging/models/: ChargingSession.py  CostDetails.py  Costs.py  EnergyDetails.py  GridPrice.py  SpotPrice.py  SpotPriceRefund.py  SpotPrices.py  UsagePrice.py  ZaptecToken.py  __init__.py
src/car_charging/tests/: test_calculate.py  test_charging_session.py  test_charging_session_manager.py  test_cost_details_manager.py  test_cost_details_model.py  test_cost_services.py  test_energy_details.py  test_energy_details_model.py  test_grid_price_model.py  test_history_view.py  test_hks_services.py  test_spot_price_model.py  test_spot_price_refund_model.py  test_spot_prices.py  test_usage_price_model.py  test_view_utils.py
src/car_charging/views/: ChargingSessionListView.py  EnergyDetailsListView.py  __init__.py  auth_token.py  charging_sessions.py  history.py  home.py  index.py  spot_price_upload_view.py  utils.py
src/jom/: asgi.py  settings.py  urls.py  wsgi.py
(+12 files in other folders)
