[tool.poetry]
name = "joint-ownership-management"
version = "0.1.0"
description = "Efficient Django-based solution for managing parking and EV charging in joint ownership settings, with potential for future expansion into broader asset management."
authors = ["Tord Aronsen <tordaro@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
packages = [{ include = "joint_ownership_management" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
ipython = "^8.18.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pytz = "^2023.3.post1"
requests = "^2.31.0"
certifi = ">2023.11.17"
types-requests = "^2.31.0.10"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
ruff = "^0.1.7"
pytest = "^7.4.4"
pytest-django = "^4.8.0"
django-stubs = "^4.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["migrations"]
ignore_missing_imports = true

[tool.ruff]
exclude = ["migrations"]
line-length = 150

[tool.black]
exclude = "migrations"
line-length = 150
string-normalization = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "jom.settings"
python_files = ["test_*.py", "*_test.py"]
